Fixed scrollbar
Updated resume

--- a/elements.css
+++ b/elements.css
@@ -17,30 +17,44 @@
 	border-radius: 100%;
 }
 
+/*general use box*/
 .box {
 	background: rgb(150,150,150);
-	width: 50%;
-	padding: 20px;
 	border-radius: 30px;
 	border: rgb(255,255,255);
 	border-width: 20px;
 	box-shadow: 0px 0px 30px 4px rgba(0, 0, 0, 0.25);
+    width: 67.5%;
+    background: linear-gradient(to top right, rgb(63, 109, 133), rgb(126, 101, 173));
+    padding: 50px;
 }
 
+/*box to go on top of above box*/
 .box-overlay {
 	width: 100%;
     background: rgba(0,0,0,.09);
     box-shadow: none;
     padding: 2px
 }
+.box-overlay:hover {
+    background:rgba(0,0,0,.115);
+    transition-duration: .3s;
+}
 
-.inner-box {
+/*box to go on top of above box, 
+but looks like it's pressed into main box*/
+.box-underlay {
     background:rgba(0,0,0,.09);
     margin-left: 8%;
     margin-right: 8%;
     border-radius: 30px;
 }
+.box-underlay:hover {
+    background:rgba(0,0,0,.115);
+    transition-duration: .3s;
+}
 
+/*boxes for projects on project page*/
 .project-box {
     margin: auto;
     padding: 20px;
@@ -57,6 +71,7 @@
     box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.3);
 }
 
+/*project images modifications*/
 .project-image {
     width: 40%;
     float: right;
@@ -68,6 +83,7 @@
     transition-duration: 100ms;
 }
 
+/*link button formatting*/
 .button {
     padding: 4px;
     border-radius: 10px;
@@ -80,9 +96,10 @@
     background: rgba(160,160,255,.2);
 }
 
+/*scroll area + scroll bar formatting*/
 .scroll-area {
     overflow: scroll;
-    height: 115px;
+    height: 140px;
     overflow-x: hidden;
     border-right: 30px rgba(0, 0, 0, 0) solid;
     border-top: 30px rgba(0, 0, 0, 0) solid;
@@ -92,6 +109,10 @@
 {
     border-radius: 10px;
 }
+::-webkit-scrollbar-thumb {
+    background-color: rgb(130,130,235);
+    border-radius: 10px;
+  }
 .scroll-area::-webkit-scrollbar
 {
     padding-left: 20px;
